--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
   <title>Nikka's Github Page</title>
 </head>
 <body id="index" onload="">
-  <h2>Welcome to my github page</h2>
+  <h2>Welcome to my github page</h2><br>
+  Link to random project: <a href='https://github.com/nikka999/nikkaurl'>nikkaurl</a>
 </body>
